--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,19 +20,19 @@ body {
 
 }
 :root {
-  --color: #2A2B2DFF;
+  --color: #2D2828;
   --main-color: white;
-  --secondary-color:  #D9514EFF;
-  --tertiary-color: #2DA8D8FF;
+  --secondary-color:  #7c6d63;
+  --tertiary-color: #8CD600;
 }
 /* 
  --- DROPDOWN MENU ---
 /* Style The Dropdown Button */
 .dropbtn {
-  background-color: #4CAF50;
-  color: white;
+  background-color: var(--secondary-color);
+  color: var(--main-color);
   padding: 16px;
-  font-size: 16px;
+  font-size: 18px;
   border: none;
   cursor: pointer;
 }
@@ -47,7 +47,7 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: var(--main-color);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -62,7 +62,9 @@ body {
 }
 
 /* Change color on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  background-color: var(--tertiary-color)
+}
 
 /* Show the dropdown on hover */
 .dropdown:hover .dropdown-content {
@@ -71,7 +73,7 @@ body {
 
 /* Change the bg of dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+  background-color: var(--tertiary-color);
 }
 /* 
 } 
@@ -131,12 +133,12 @@ h2 {
 }
 
 h3 {
-  color: var(--secondary-color);
+  color: var(--main-color);
 }
 
 p {
   margin: 0;
-  color: lightslategray
+  color: var(--secondary-color)
 }
 
 
@@ -153,7 +155,12 @@ p {
 .img-splash {
   display: flex;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
+
+  width: 100%; 
+  height: 100%; 
+  object-fit: contain; 
+
 }
 .titles-splash {
   display: flex;
@@ -169,8 +176,12 @@ p {
   margin-left: auto;
   margin-right: auto;
   align-items: center;
-  width: 20em
+  width: 20em;
+  /* background-color: var(--main-color); */
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1; */
 }
+
 
 
 /* ---- LOGIN AND SIGN UP PAGES ---- */
@@ -239,7 +250,7 @@ p {
 /* ---- GYM DETAILS ---- */
 a.this-gym-details:link, a.this-gym-details:visited {
   background-color: var(--color);
-  border: 1px solid var(--tertiary-color);
+  /* border: 1px solid var(--tertiary-color); */
   color: var(--secondary-color);
   padding: 14px 25px;
   text-align: center;
