adjust display of average rating to show percentages

--- a/views/gymDetails.hbs
+++ b/views/gymDetails.hbs
@@ -15,7 +15,7 @@
 <h3>ADDITIONAL INFO:</h3>
 <li>{{additionalInfo}}</li>
 
-<p>RATING: {{averageRating}}</p>
+<p>GYM RATING: {{averageRating}}%</p>
 <p>CREATED BY: {{creator}}</p>
 
 <a href="/gyms/{{_id}}/details/edit">EDIT</a>
