--- a/views/gymsList.hbs
+++ b/views/gymsList.hbs
@@ -3,11 +3,12 @@
     <h2>Welcome, {{currentUser.username}}!</h2>
      </div>
      <div style="flex-shrink: 0">
-    <h3>HIDDEN GYMS IN BARCELONA- </h3>
+    <p>Create, Rate, and Discover Hidden Gym</p>
 
      </div>
  </section>
 
+<h1> HIDDEN GYMS IN BARCELONA- </h1>
 
 <section class="gyms-list-gallery">
     {{#each gyms}}
