--- a/views/gymDetails.hbs
+++ b/views/gymDetails.hbs
@@ -11,15 +11,16 @@
 </form>
 <h3>EQUIPMENT:</h3>
 <li>{{equipmentAvailable}}</li>
+
 </h3>
 <h3>ADDITIONAL INFO:</h3>
 <li>{{additionalInfo}}</li>
 {{#if averageRating}}
-<p>GYM RATING: {{averageRating}}%</p>
+<h3>GYM RATING: {{averageRating}}%</h3>
 {{else}}
-<p>GYM RATING: No votes yet. Be the first one to rate it!</p>
+<h3>GYM RATING: No votes yet. Be the first one to rate it!</h3>
 {{/if}}
-<p>CREATED BY: {{creator}}</p>
+<h3>CREATED BY: {{creator}}</h3>
 
 <a href="/gyms/{{_id}}/details/edit">EDIT</a>
 
