--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,7 +9,7 @@
     <label for="password">PASSWORD</label> 
     <input type="password" name="password" id="password" required placeholder="Password">
     <br>
-    <button class="main-buttons-section" type="submit">LOGIN</button>
+    <button type="submit">LOGIN</button>
 </form>
 </div>
 
