--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,13 +9,13 @@
  <div>
     {{#unless currentUser}}
       
-      <img class="img-splash" src="./images/NEWLOGO.png">
+      <img class="img-splash" src="./images/newlogo.png">
       
 
       <section class="titles-splash">
         <div>
-          <h2>Hidden Gym</h2>
-          <h3>Hidden Gym is the simplest way to find outdoor gyms in Barcelona</h3>
+          
+          <h2>The simplest way to find outdoor gyms in Barcelona</h2>
         </div>
       </section>
         
