--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,26 +11,52 @@ html {
 
 
 body {
-  color: white;
+  color: var(--secondary-color);
   font-family: "Arial Black", Gadget, sans-serif;
   font-size: 16px;
-  line-height: 147%;
-  background: var(--color);
+  background-image: url("../images/backgroundtexture.jpg");
+  background-repeat: repeat;
+  background-color: #cccccc;
+
   min-height: 100%;
 
 }
 :root {
   --color: #c7af6b;
   --main-color: #2D2828;
-  --secondary-color:  white;
-  --tertiary-color: #ff3a22;
+  --secondary-color: whitesmoke;
+  --tertiary-color: darkred;
 }
+
+
+
+
+
+/* HEADER
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.page-header {
+  background-color: whitesmoke;
+}
+.page-header nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
+
+
+
+
+
 /* 
  --- DROPDOWN MENU ---
 /* Style The Dropdown Button */
 .dropbtn {
-  background-color: var(--main-color);
-  color: var(--color);
+  background-color: var(--secondary-color);
+  color: var(--main-color);
   padding: 16px;
   font-size: 18px;
   font-family: "Arial Black", Gadget, sans-serif;
@@ -64,7 +90,8 @@ body {
 
 /* Changes color on hover */
 .dropdown-content a:hover {
-  background-color: var(--tertiary-color)
+  background-color: var(--tertiary-color);
+  color: var(--secondary-color);
 }
 
 /* Show the dropdown on hover */
@@ -83,7 +110,7 @@ body {
 /* ---- typography ---- */
 
 h1 {
-
+font-size: x-large;
 }
 
 h2 {
@@ -94,10 +121,11 @@ h2 {
 
 h3 {
   color: var(--main-color);
+  background: var(--secondary-color)
 }
 
 p {
-  margin: 0;
+  margin: 10px;
   color: var(--secondary-color)
 }
 
@@ -117,9 +145,14 @@ p {
   margin-left: auto;
   margin-right: auto;
 
-  width: 100%; 
-  height: 100%; 
+  width: 50%; 
+  height: 50%; 
   object-fit: contain; 
+
+}
+img.rounded-corners {
+
+  border-radius: 30px;
 
 }
 .titles-splash {
@@ -180,33 +213,29 @@ a.main-buttons-section:active {
 
 
 
-/* ---- GYMS PAGE ---- */
+/* ---- GYMS LIST PAGE ---- */
 .welcome-title {
   display: flex;
   flex-flow: row wrap;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  width: 20em;
+  width: 100%;
   margin: 0 auto;
-  width: 25rem;
+  
   background: var(--tertiary-color);
   padding: 20px;
 }
  .details-title {
-  /* display: inline; */
-  /* margin-left: auto; */
-  /* margin-right: auto; */
-  /* text-align: center; */
-  /* width: 20em; */
   margin: 0 auto;
-  width: 25rem;
+  width: 100%;
   background: var(--tertiary-color);
   padding: 20px;
 
 }
+/* TITLES WITH BARS */
 h2 {
-  color: white;
+  color: var(--secondary-color);
   position: relative;
   background: black;
 }
@@ -220,79 +249,61 @@ h2:before {
 	border-left: 9999px solid black;
 	box-shadow: 9999px 0 0 black;
 }
-/*
-.createGym-title {
-  display: inline;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: 20em;
-} */
+
 
 .gyms-list-gallery {
   display: grid;
+
 
 }
 .gyms-list-gallery ul {
   display: flex;
   flex-flow: row wrap;
   list-style: none;
-  margin: 32px 0;
+  padding: 0%; 
+  margin: 0%;
+  
 }
 .gyms-list-gallery li {
-  margin: 0 10px;
-  flex-basis: calc(50% - 20px);  /* width minus margins */
+  padding: 0%; 
+  margin: 0%;
+  width:350px;
+  
 }
 
 .gyms-list-gallery img {
-  width: 100%;           /* occupy 100% width of li container */
-  height: auto;
+  min-width: 100%;
+  height: 400px;
 }
+.image-contain {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
 
 
 /* ---- GYM DETAILS ---- */
 a.this-gym-details:link, a.this-gym-details:visited {
-  background-color: var(--color);
-  /* border: 1px solid var(--tertiary-color); */
+  background-color: #2d2828ba;
+  border: 3px solid var(--main-color);
   color: var(--secondary-color);
-  padding: 14px 25px;
+  
   text-align: center;
   text-decoration: none;
   display: inline-block;
 }
 
 a.this-gym-details:hover, a.this-gym-details:active {
-  background-color: var(--tertiary-color);
-  color: rgb(237, 237, 208);
+  background-color: #8b00005e;
+  color: var(--secondary-color)
 }
 
 
 
 
-#site-header {
-  padding: 30px 0;
-  color: white;
-  background: #111;
-}
-
-#site-footer {
-  color: white;
-  padding: 60px 0;
-  background: #111;
-}
-
-#site-main {
-  margin-bottom: 60px;
-}
-
-.container {
-  margin: 0 20px;
-}
-
-.section {
-  margin-bottom: 20px;
-  padding-top: 20px;
-}
 
 @media (min-width: 768px) {
   .container {
@@ -301,9 +312,68 @@ a.this-gym-details:hover, a.this-gym-details:active {
   }
 }
 
-/* 
- */
+/* THIS GYM DETAILS */
 
+.details-container {
+  width: 100%;
+  height: 100%;
+  min-height: 250px;
+  position: relative;
+  
+}
+
+.details-container img {
+  max-height: 100%;
+  max-width: 100%;
+  height: auto;
+  width: auto;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-sizing: border-box;
+  margin: auto;
+}
+
+
+.upvote-buttons-section.container {
+  background: transparent;
+  display: flex;
+  box-shadow: none;
+  font-family: "Arial Black", Gadget, sans-serif;
+}
+.upvote-buttons-section {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  border: none;
+  background: silver;
+  box-shadow: 0 5px 0 darkred;
+  color: black;
+  font-family: "Arial Black", Gadget, sans-serif;
+  padding: 0.5em 0.5em;
+  position: relative;
+  text-decoration: none;
+}
+.downvote-buttons-section {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  border: none;
+  background: silver;
+  box-shadow: 0 5px 0 darkred;
+  color: black;
+  
+  padding: 0.5em 0.5em;
+  position: relative;
+  text-decoration: none;
+}
 
 
 
