--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
+    <header class="page-header">
+      <nav>
       {{#if currentUser}}
         <div class="dropdown">
           <button class="dropbtn">Menu</button>
@@ -18,7 +20,12 @@
               </form>
             </div>
         </div>
+        <div>
+        <img src="/images/diamondSmall.png">
+        </div>
        {{/if}}
+      </nav>
+    </header>
     {{{body}}}
 
   </body>
