--- a/views/gymDetails.hbs
+++ b/views/gymDetails.hbs
@@ -18,9 +18,8 @@
 </section>
 
 <h3>EQUIPMENT:</h3>
-{{#each equipmentAvailable}}
-    <p>{{equipmentAvailable}}</p>
-{{/each}}
+<li>{{equipmentAvailable}}</li>
+
 
 </h3>
 <h3>ADDITIONAL INFO:</h3>
