--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,14 +8,21 @@
   </head>
  <div>
     {{#unless currentUser}}
-      
-      <img class="img-splash" src="./images/newlogo.png">
+      <section class='event'  id='event'>
+      <div class='cell well'>
+       
+        <div class='event-content'>
+        <img class="img-splash" src="./images/hiddengymlogo.png" alt='GemAnimation' id='GemAnimation' width='200' />
+         
+         
+        </div>
+      </div>
+    </section>>
       
 
       <section class="titles-splash">
         <div>
-          
-          <h2>The simplest way to find outdoor gyms in Barcelona</h2>
+          <p>Find one near you</p>
         </div>
       </section>
         
