--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+  </style>
+
     <header class="page-header">
       <nav>
       {{#if currentUser}}
@@ -20,8 +24,8 @@
               </form>
             </div>
         </div>
-        <div>
-        <img src="/images/diamondSmall.png">
+        <div class="logo">
+        <img src="/images/hiddengymlogoblack.png">
         </div>
        {{/if}}
       </nav>
