--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,10 +3,10 @@
 <div id="parent_login_signup">
 <form id="form_login_signup" action="/auth/signup" method="POST">
     <label for="username">USERNAME</label>
-    <input type="text" name="username" id="username" required placeholder="Username">
+    <input type="text" name="username" id="username" required>
     <br>
     <label for="password">PASSWORD</label> 
-    <input type="password" name="password" id="password" required placeholder="Password">
+    <input type="password" name="password" id="password" required>
     <br>
     <button type="submit">SIGNUP</button>
 </form>
