--- a/views/gymsList.hbs
+++ b/views/gymsList.hbs
@@ -26,7 +26,7 @@
                 {{#if averageRating}}
                     <p>GYM RATING: {{averageRating}}%</p>
                 {{else}}
-                    <p>GYM RATING: No votes yet<br>Be the first one to rate it!</p>
+                    <p>GYM RATING: No votes yet. Be the first one to rate it!</p>
                 {{/if}}
             </li>
 
