--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,10 +4,10 @@
 <div id="parent_login_signup">
 <form id="form_login_signup" action="/auth/login" method="POST">
     <label for="username">USERNAME</label>
-    <input type="text" name="username" id="username" required placeholder="Username">
+    <input type="text" name="username" id="username" required>
     <br>
     <label for="password">PASSWORD</label> 
-    <input type="password" name="password" id="password" required placeholder="Password">
+    <input class type="password" name="password" id="password" required>
     <br>
     <button type="submit">LOGIN</button>
 </form>
