--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
 
       <section class="titles-splash">
         <div>
-          <p>Find one near you</p>
+          <p>Find one near you!</p>
         </div>
       </section>
         
