--- a/views/createGym.hbs
+++ b/views/createGym.hbs
@@ -2,7 +2,7 @@
 <h2>ADD Hidden Gym</h2>
 </section>
 
-<form action="/gyms/create" method="POST" enctype="multipart/form-data">
+<form id="edit-fields" action="/gyms/create" method="POST" enctype="multipart/form-data">
   <label for="address">ADDRESS-</label>
   <input style="width:90vw" type="text" name="address" id="address" required>
   <br>
